loadbalancer/load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: laravel-k8s-prod-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: laravel-k8s-prod
    env: prod
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
