loadbalancer/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: laravel-k8s-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # This is setting client_max_body_size: 100M on the nginx-ingress controller itself. 
    # Somehow this needs to be set here even if already defined on default.conf template file on nginx.
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  tls:
  # Assuming that you have a secret configured in the cluster named larvel-k8s-tls with appropriate
  # contents. See SSL / TLS section in README.md
  - secretName: laravel-k8s-tls
    hosts:
    - laravel-k8s.test
  rules:
  # Host can be set in /etc/host on the host machine.
  - host: laravel-k8s.test
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app-service
            port:
              number: 80
